istio/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-status-v1
  namespace: flagger-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-status-v1
  template:
    metadata:
      labels:
        app: api-status-v1
    spec:
      containers:
        - name: api-locales
          image: christian1607/golang-api-status:0.0.1
          resources:
            limits:
              memory: "100Mi"
              cpu: "0.3"
            requests:
              memory: "10Mi"
              cpu: "0.1"
          args:
            - -cpus
            - "1"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: flagger-app
  name: api-status-v1
spec:
  selector:
    app: api-status-v1
  ports:
    - name: http
      protocol: "TCP"
      port: 8090
      targetPort: 8090
  type: ClusterIP
